--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Welcome to My Flask App</h1>
-    <p>This is a sample page.</p>
+    <p>:)</p>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
