--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,21 +1,25 @@
-{% extends "index.html" %}
-
-{% block title %}Login{% endblock %}
-
-{% block content %}
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
-<form method="POST">
-    <h3>Login</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+</head>
+<body>
+    <div class="container">
+        <form method="POST">
+            <h3>Login</h3>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-</div>
-{% endblock %}
+</body>
+</html>
