--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,35 +1,39 @@
-{% extends "index.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <form method="POST">
+            <h3>Register</h3>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+            </div>
+            <div class="form-group">
+                <label for="nickName">Nickname</label>
+                <input type="text" class="form-control" id="nickName" name="nickName" placeholder="Enter nickname"/>
+            </div>
+            <div class="form-group">
+                <label for="password1">Password</label>
+                <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password"/>
+            </div>
+            <div class="form-group">
+                <label for="password2">Password (Confirm)</label>
+                <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password"/>
+            </div>
 
-{% block title %}Register{% endblock %}
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="isTrainer" name="isTrainer">
+                <label class="form-check-label" for="isTrainer">I am a Trainer</label>
+            </div>
 
-{% block content %}
-<div class="container">
-<link rel="stylesheet" href="style.css">
-<form method="POST">
-    <h3 align="center">Sign Up</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="nickName">Nickname</label>
-        <input type="text" class="form-control" id="nickName" name="nickName" placeholder="Enter nickname"/>
-    </div>
-    <div class="form-group">
-        <label for="password1">Password</label>
-        <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password"/>
-    </div>
-    <div class="form-group">
-        <label for="password2">Password (Confirm)</label>
-        <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password"/>
-    </div>
-
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="isTrainer" name="isTrainer">
-        <label class="form-check-label" for="isTrainer">I am a Trainer</label>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
-{% endblock %}
+</body>
+</html>
