--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="../static/js/register.js">
-    </script>
+    <script src="../static/js/register.js"></script>
 </head>
 <body>
     <div class="container">
-        <form method="POST">
+        <form method="POST" action="{{ url_for('register.register') }}">
             <h3>Register</h3>
             <div class="form-group">
                 <label for="email">Email Address</label>
