--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="../static/js/login.js"></script>
 </head>
 <body>
     <div class="container">
-        <form method="POST">
+        <form method="POST" action="{{ url_for('login.login') }}">
             <h3>Login</h3>
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
             </div>
+
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
             </div>
+
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
