Redirection resolved, sub value read from session

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Welcome {{ user_email }}, you are a {{ user_type }}</h3>
-        <!-- Add other dashboard content here -->
+        <h3>Welcome, {{ user_sub }}</h3>
     </div>
 </body>
 </html>
