Login, registration and dashboard pages enhanced

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Login to your account - Enter your email and password to access your account.">
     <title>Login</title>
+    <link rel="stylesheet" href="../static/css/login.css">
     <script src="../static/js/login.js"></script>
 </head>
 <body>
