--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,14 +14,16 @@
             <h3>Login</h3>
             <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required/>
             </div>
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required/>
             </div>
 
+            <div id="error-section" class="error-section"></div>
+            
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
