--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,12 +13,12 @@
         <form method="POST" action="{{ url_for('login.login') }}">
             <h3>Login</h3>
             <div class="form-group">
-                <label for="email">Email Address</label>
+                <label for="email">Email Address:</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required/>
             </div>
 
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password:</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required/>
             </div>
 
