Login and reg redirect

--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -41,7 +41,7 @@ input {
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
-.btn-primary {
+button {
     background-color: #7a5eb5; /* Purple button color */
     color: #ffffff; /* Light button text color */
     padding: 10px 20px;
@@ -54,7 +54,7 @@ input {
     font-family: 'Poppins', sans-serif;
 }
 
-.btn-primary:hover {
+button:hover {
     background-color: #593d8b; /* Darker purple on hover */
 }
 
