--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,8 +23,12 @@
             </div>
 
             <div id="error-section" class="error-section"></div>
-            
-            <button type="submit" class="btn btn-primary">Login</button>
+
+            <button type="submit">Login</button>
+
+            <p>Don't have an account?</p>
+
+            <button onclick="register_redirect()">Sign Up</button>
         </form>
     </div>
 </body>
