--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -46,7 +46,11 @@
 
             <div id="error-section" class="error-section"></div>
             
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit">Submit</button>
+
+            <p>Already have an account?</p>
+
+            <button onclick="login_redirect()">Log In</button>
         </form>
     </div>
 </body>
