--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Welcome, {{ user_sub }}</h3>
+        <h3>Welcome, {{ user_type }}</h3>
     </div>
 </body>
 </html>
