--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/css/dashboard.css">
 </head>
 <body>
+    <a class="logout-button" id="logout" href="/logout">Logout</a>
     <div class="container">
         <h3>Welcome, {{ user_type }}</h3>
     </div>
