--- a/app/templates/add_workout.html
+++ b/app/templates/add_workout.html
@@ -12,8 +12,8 @@
         <form method="POST" action="/add-workout" id="workoutForm">
             <h3>Add Workout</h3>
             <div class="form-group">
-                <label for="user_sub">User Sub:</label>
-                <input type="text" class="form-control" id="user_sub" name="user_sub" placeholder="Enter user sub" required/>
+                <label for="email">Email:</label>
+                <input type="text" class="form-control" id="email" name="email" placeholder="Enter email address" required/>
             </div>
 
             <h3>Workout Plan</h3>
