--- a/app/templates/add_workout.html
+++ b/app/templates/add_workout.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container" id="container">
+    <div class="container">
         <form method="POST" action="/add-workout" id="workoutForm">
             <h3>Add Workout</h3>
             <div class="form-group">
@@ -31,6 +31,8 @@
             <div id="error-section" class="error-section"></div>
         </form>
     </div>
-{% endblock %}
 
-<script src="../static/js/add_workout.js"></script>
+    <script src="../static/js/add_workout.js"></script>
+{% endblock %}
+</body>
+</html>
