--- a/app/static/css/add_workout.css
+++ b/app/static/css/add_workout.css
@@ -30,9 +30,9 @@ label {
 
 input,
 textarea {
-    width: calc(100% - 20px); /* Adjusted width to allow for padding */
+    width: calc(100% - 20px);
     padding: 10px;
-    margin-bottom: 10px; /* Added margin bottom for spacing */
+    margin-bottom: 10px;
     border: 1px solid #7a5eb5;
     border-radius: 4px;
     background-color: #2b2b2b;
@@ -51,7 +51,7 @@ button {
     position: relative;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 10px; /* Added margin bottom for spacing */
+    margin-bottom: 10px;
 }
 
 button:hover {
@@ -59,7 +59,8 @@ button:hover {
 }
 
 #error-section {
-    margin-top: 10px; /* Added margin top for spacing */
+    display: none; /* Hide the error section by default */
+    margin-top: 10px;
     padding: 10px;
     background-color: #ff5454;
     color: #ffffff;
