--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -17,7 +17,7 @@
     {% block content %}
         <a class="logout-button" id="logout" href="/logout">Logout</a>
         <div class="container">
-            <h3>Welcome, {{ user_type }}</h3>
+            <h3>Welcome, {{ email }}</h3>
         </div>
     {% endblock %}
 </body>
