--- a/app/templates/add_workout.html
+++ b/app/templates/add_workout.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" id="container">
         <form method="POST" action="/add-workout" id="workoutForm">
             <h3>Add Workout</h3>
             <div class="form-group">
