--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -15,8 +15,7 @@
     {% endblock %}
 
     {% block content %}
-        <a class="logout-button" id="logout" href="/logout">Logout</a>
-        <div class="container">
+        <div class="container" id="container">
             <h3>Welcome, {{ email }}</h3>
         </div>
     {% endblock %}
