--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,6 +14,7 @@
                 <a class="nav-item nav-link" id="my-workouts" href="/my-workouts">My Workouts</a>
                 {% if user_type == "Trainer" %}
                 <a class="nav-item nav-link" id="add-workout" href="/add-workout">Add workout</a>
+                <a class="nav-item nav-link" id="my-students" href="/my-students">My Students</a>
                 {% endif %}
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             </div>
@@ -24,6 +25,7 @@
                     <a class="nav-item nav-link" id="my-workouts" href="/my-workouts">My Workouts</a>
                     {% if user_type == "Trainer" %}
                     <a class="nav-item nav-link" id="add-workout" href="/add-workout">Add workout</a>
+                    <a class="nav-item nav-link" id="my-students" href="/my-students">My Students</a>
                     {% endif %}
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 </div>
