--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,6 +12,7 @@
             <div class="no-dropdown">
                 <a class="nav-item nav-link" id="dashboard" href="/">Dashboard</a>
                 <a class="nav-item nav-link" id="my-workouts" href="/my-workouts">My Workouts</a>
+                <a class="nav-item nav-link" id="my-records" href="/my-records">My Records</a>
                 {% if user_type == "Trainer" %}
                 <a class="nav-item nav-link" id="add-workout" href="/add-workout">Add workout</a>
                 <a class="nav-item nav-link" id="my-students" href="/my-students">My Students</a>
@@ -23,6 +24,7 @@
                 <div id="myDropdown" class="dropdown-content">
                     <a class="nav-item nav-link" id="dashboard" href="/">Dashboard</a>
                     <a class="nav-item nav-link" id="my-workouts" href="/my-workouts">My Workouts</a>
+                    <a class="nav-item nav-link" id="my-records" href="/my-records">My Records</a>
                     {% if user_type == "Trainer" %}
                     <a class="nav-item nav-link" id="add-workout" href="/add-workout">Add workout</a>
                     <a class="nav-item nav-link" id="my-students" href="/my-students">My Students</a>
