--- a/app/templates/my_records.html
+++ b/app/templates/my_records.html
@@ -9,25 +9,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" id="container">
     <h2>My Records {{ email }} </h2>
     <div class="form-group">
         <label for="benchPress">Bench Press</label>
         <p class="current-record">Current Record: <!-- Add logic here to fetch the current record --></p>
         <input type="number" id="benchPress" placeholder="Enter your new record" oninput="validateInput(this)" min="0">
-        <button type="button" onclick="submitRecord('benchPress')">Submit</button>
+        <button type="button" >Submit</button>
     </div>
     <div class="form-group">
         <label for="deadlift">Deadlift</label>
         <p class="current-record">Current Record: <!-- Add logic here to fetch the current record --></p>
         <input type="number" id="deadlift" placeholder="Enter your new record" oninput="validateInput(this)" min="0">
-        <button type="button" onclick="submitRecord('deadlift')">Submit</button>
+        <button type="button" >Submit</button>
     </div>
     <div class="form-group">
         <label for="squats">Squats</label>
         <p class="current-record">Current Record: <!-- Add logic here to fetch the current record --></p>
         <input type="number" id="squats" placeholder="Enter your new record" oninput="validateInput(this)" min="0">
-        <button type="button" onclick="submitRecord('squats')">Submit</button>
+        <button type="button">Submit</button>
     </div>
 </div>
 <script src="../static/js/my_records.js"></script>
